--- a/package.json
+++ b/package.json
@@ -2,15 +2,32 @@
   "name": "ordernurse",
   "version": "0.1.0",
   "description": "commander test",
-  "main": "index.js",
+  "main": "app.js",
   "directories": {
     "example": "examples",
     "test": "test"
   },
-  "dependencies": {},
-  "devDependencies": {},
+  "dependencies": {
+    "binance-api-node": "^0.8.0",
+    "bluebird": "^3.5.1",
+    "chalk": "^2.4.1",
+    "cli-table": "^0.3.1",
+    "commander": "^2.15.1",
+    "dotenv": "^5.0.1",
+    "eslint": "^4.19.1",
+    "fancy-log": "^1.3.2",
+    "node-uuid": "^1.4.8",
+    "pushjet": "0.0.3",
+    "redis": "^2.8.0",
+    "vorpal": "^1.12.0"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.3",
+    "prettier-eslint": "^8.8.1"
+  },
   "scripts": {
-    "test": "make test"
+    "test": "make test",
+    "start": "node ./app.js"
   },
   "keywords": [
     "npm"
